--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ install:
     - pip install nose
     - python setup.py install
 
-script: nosetests -s tests/*/*.py
+script: nosetests -s tests/*.py
 
