use "mjml" name for library, adapt README.md

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name          = mjml-stub
+name          = mjml
 version       = file: VERSION.txt
 description   = Python implementation for MJML - a framework that makes responsive-email easy
 
