mjml script: use setuptools-based wrapper so Windows users can run it more easily

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,10 @@ zip_safe = true
 include_package_data = true
 
 scripts =
-	mjml/scripts/mjml
 	mjml/scripts/mjml-html-compare
+
+
+[options.entry_points]
+console_scripts =
+    mjml  = mjml.scripts.mjml:main
 
