move all requirements to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,8 +34,20 @@ packages = find:
 zip_safe = true
 include_package_data = true
 
+install_requires =
+	docopt
+	jinja2
+	lxml
+
 scripts =
 	mjml/scripts/mjml-html-compare
+
+
+[options.extras_require]
+testing =
+	ddt
+	HTMLCompare >= 0.3.0        # >= 0.3.0: ability to ignore attribute ordering in HTML
+	PythonicTestcase
 
 
 [options.entry_points]
