--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ python:
     - "pypy3"
 
 install:
-    - pip install -r requirements.txt
-    - pip install -r dev_requirements.txt
+    - pip install -e .[testing]
     - pip install nose
     - python setup.py install
 
