stop shipping tests in wheel

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,10 @@ scripts =
 	mjml/scripts/mjml-html-compare
 
 
+[options.packages.find]
+exclude =
+    tests
+
 [options.extras_require]
 testing =
 	ddt
