--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ exclude =
 [options.extras_require]
 testing =
 	ddt
+	FakeFSHelpers
 	HTMLCompare >= 0.3.0        # >= 0.3.0: ability to ignore attribute ordering in HTML
 	PythonicTestcase
 
