make CSS inlining optional

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,6 @@ zip_safe = true
 include_package_data = true
 
 install_requires =
-	css_inline
 	docopt
 	jinja2
 	lxml
@@ -55,6 +54,8 @@ testing =
 	FakeFSHelpers
 	HTMLCompare >= 0.3.0        # >= 0.3.0: ability to ignore attribute ordering in HTML
 	PythonicTestcase
+css_inlining =
+	css_inline
 
 
 [options.entry_points]
