ensure test suite also passes without "css_inline" being installed

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,3 +26,7 @@ jobs:
       run: |
         pytest
 
+    - name: Test CSS inlining
+      run: |
+        pip install -e .[css_inlining]
+        pytest
