Use BeautifulSoup instead of lxml for MJML/HTML parsing.
* Fixes #6
* Fixes #10
* Fixes #14
* Fixes #19

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,9 +37,9 @@ zip_safe = true
 include_package_data = true
 
 install_requires =
+	beautifulsoup4
 	docopt
 	jinja2
-	lxml
 
 scripts =
 	mjml/scripts/mjml-html-compare
