--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ testing =
 	ddt
 	FakeFSHelpers
 	HTMLCompare >= 0.3.0        # >= 0.3.0: ability to ignore attribute ordering in HTML
+	lxml
 	PythonicTestcase
 css_inlining =
 	css_inline
