--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,8 @@ on: [push]
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    # "ubuntu-latest" does not have Python 3.6
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
