css_inline >= 0.10 contains an incompatible API change so require the old version for now (#43)
The "inline_style_tags" parameter for the "CSSInliner" class was removed without
an obvious replacement.

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ testing =
 	lxml
 	PythonicTestcase
 css_inlining =
-	css_inline
+	css_inline < 0.10        # < 0.10: CSSInliner(inline_style_tags=...)
 
 
 [options.entry_points]
