setup.cfg: move library out of "alpha" stage
The library is used in production now so at least it is not "alpha" anymore.

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ license       = MIT
 license_file  = LICENSE.txt
 
 classifiers =
-	Development Status :: 3 - Alpha
+	Development Status :: 4 - Beta
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
 	Programming Language :: Python :: 3
@@ -59,6 +59,8 @@ testing =
 	PythonicTestcase
 css_inlining =
 	css_inline < 0.10        # < 0.10: CSSInliner(inline_style_tags=...)
+
+	#css_inline >= 0.10.0        # >= 0.10.0: CSSInliner(inline_style_tags=...)
 
 
 [options.entry_points]
