setup.cfg: use "license_files" option because "license_file" is deprecated

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,8 @@ author        = Felix Schwarz
 author_email  = felix.schwarz@oss.schwarz.eu
 url           = https://github.com/FelixSchwarz/mjml-python
 license       = MIT
-license_file  = LICENSE.txt
+# requires setuptools >= 42.0.0
+license_files = LICENSE.txt
 
 classifiers =
 	Development Status :: 4 - Beta
