--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include .github/workflows/*.yml
 include CHANGELOG.md
 include tests/*.py
+include tests/testdata/*.mjml
 include tests/testdata/*.html
 include tools/*.py
