pin css-inline to v0.11

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,9 +59,7 @@ testing =
 	lxml
 	PythonicTestcase
 css_inlining =
-	css_inline < 0.10        # < 0.10: CSSInliner(inline_style_tags=...)
-
-	#css_inline >= 0.10.0        # >= 0.10.0: CSSInliner(inline_style_tags=...)
+	css_inline >= 0.11, < 0.12        # >= 0.11, < 0.12: CSSInliner(inline_style_tags=..., keep_link_tags=..., keep_style_tags=...)
 
 
 [options.entry_points]
