use only pytest for testing
pytest is clearly the preferred tool for testing in Python.

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,11 +54,10 @@ exclude =
 
 [options.extras_require]
 testing =
-	ddt
 	FakeFSHelpers
 	HTMLCompare >= 0.3.0        # >= 0.3.0: ability to ignore attribute ordering in HTML
 	lxml
-	PythonicTestcase
+        pytest
 css_inlining =
 	css_inline >= 0.11, < 0.12        # >= 0.11, < 0.12: CSSInliner(inline_style_tags=..., keep_link_tags=..., keep_style_tags=...)
 
