replace homegrown AttrDict with dotmap

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,9 +40,10 @@ zip_safe = true
 include_package_data = true
 
 install_requires =
-	beautifulsoup4
-	docopt
-	jinja2
+    beautifulsoup4
+    dotmap
+    docopt
+    jinja2
 
 scripts =
 	mjml/scripts/mjml-html-compare
