--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ install_requires =
     dotmap
     docopt
     jinja2
+    typing_extensions # TODO typing: move elsewhere if possible
 
 scripts =
 	mjml/scripts/mjml-html-compare
