add typing_extensions to required installs

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ install_requires =
     dotmap
     docopt-ng
     jinja2
+    typing_extensions # TODO typing: move elsewhere if possible
 
 scripts =
     mjml/scripts/mjml-html-compare
