accept also `css_inline >= 0.14` (#55)

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,7 +59,8 @@ testing =
     lxml
     pytest
 css_inlining =
-    css_inline >= 0.11, < 0.14        # >= 0.11, < 0.14: CSSInliner(inline_style_tags=..., keep_link_tags=..., keep_style_tags=...)
+    # >= 0.11: CSSInliner(inline_style_tags=..., keep_link_tags=..., keep_style_tags=...)
+    css_inline >= 0.11
 
 
 [options.entry_points]
