--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,34 +10,51 @@ on:
     - main
 
 jobs:
-  tests:
-    # "ubuntu-latest" does not have Python 3.6
-    runs-on: ubuntu-20.04
+  tests_cpython:
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, "3.10", "3.11", "3.12", "pypy-3.8", "pypy-3.9"]
+        python-version: [3.6, 3.7, 3.8, 3.9, "3.10", "3.11", "3.12"]
+    container:
+        image: python:${{ matrix.python-version }}
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: Run tests without optional features
       run: |
         pip install -e .[testing]
-
-    - name: Run test suite
-      run: |
         pytest
 
     - name: Test CSS inlining
       run: |
-        if [[ "${{ matrix.python-version }}" != "3.6" ]]; then
+        if [ "${{ matrix.python-version }}" != "3.6" ]; then
           pip install -e .[css_inlining]
           pytest
         else
           echo "Skipping CSS inlining tests for Python 3.6"
         fi
+
+
+  tests_pypy:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        pypy-version: ["3.10", "3.11", "latest"]
+    container:
+        image: pypy:${{ matrix.pypy-version }}
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Run tests without optional features
+      run: |
+        pip install -e .[testing]
+        pytest
+
+    - name: Test CSS inlining
+      run: |
+        pip install -e .[css_inlining]
+        pytest
