--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+[build-system]
+requires = [
+    "setuptools >= 42.0",  # `license_files` in `setup.cfg`
+    "wheel"
+]
+
 [tool.ruff]
 line-length = 100
 
