--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,7 @@ markers =
 
 # "xpassed" should be treated as failure
 xfail_strict=true
+
+# warnings triggered during test discovery - these can not be filtered via conftest.py
+filterwarnings =
+    error
