python 3.6, require `beautifulsoup4 < 4.13` because 4.13 is incompatible with Python 3.6 without declaring it

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,10 @@ zip_safe = true
 include_package_data = true
 
 install_requires =
-    beautifulsoup4
+    # beautifulsoup4 v4.13 uses `from __future__ import annotations` which is
+    # not supported in Python 3.6
+    beautifulsoup4 < 4.13; python_version <= '3.6'
+    beautifulsoup4; python_version > '3.6'
     dotmap
     docopt
     jinja2
