GitHub Actions: set up weekly test runs to detect breakage due to updated dependencies

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,12 @@ on:
   pull_request:
     branches:
     - main
+  schedule:
+    # Run tests weekly on Sundays at 5:47 UTC.
+    # This might help us us detecting unexpected breakage due to changes in
+    # 3rd-party dependencies. GitHub only triggers this for the default branch.
+    - cron: '47 5 * * 0'
+
 
 jobs:
   tests_cpython:
