--- a/setup.cfg
+++ b/setup.cfg
@@ -17,14 +17,12 @@ classifiers =
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
     Programming Language :: Python :: 3.13
+    Programming Language :: Python :: 3.14
     Topic :: Communications :: Email
     Topic :: Text Processing :: Markup :: HTML
 project_urls =
@@ -33,17 +31,14 @@ project_urls =
 
 
 [options]
-python_requires = >= 3.6
+python_requires = >= 3.9
 
 packages = find:
 zip_safe = true
 include_package_data = true
 
 install_requires =
-    # beautifulsoup4 v4.13 uses `from __future__ import annotations` which is
-    # not supported in Python 3.6
-    beautifulsoup4 < 4.13; python_version <= '3.6'
-    beautifulsoup4; python_version > '3.6'
+    beautifulsoup4
     dotmap
     docopt-ng
     jinja2
