remove custom test, htmlcompare 0.4.0 can detect whitespace correctly

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ exclude =
 
 [options.extras_require]
 testing =
-    HTMLCompare >= 0.3.0        # >= 0.3.0: ability to ignore attribute ordering in HTML
+    HTMLCompare >= 0.4.0        # >= 0.4.0 for enhanced whitespace detection
     lxml
     pytest
 css_inlining =
