--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
 
 - repo: https://github.com/charliermarsh/ruff-pre-commit
   # Ruff version.
-  rev: 'v0.11.9'
+  rev: 'v0.14.10'
   hooks:
     - id: ruff
-      # args: [--fix, --exit-non-zero-on-fix]
+      args: [--fix, --exit-non-zero-on-fix]
