update typing imports, remove typing todos

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     dotmap
     docopt-ng
     jinja2
-    typing_extensions # TODO typing: move elsewhere if possible
+    typing_extensions  # required for @override which was added only in Python < 3.12
 
 scripts =
     mjml/scripts/mjml-html-compare
