GitHub Actions: release workflow should create a new GitHub release and attach files to it

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,15 @@
 name: Create Release Artifacts
 
 on:
-  - workflow_dispatch
+  push:
+    tags:
+      - "v*"
+
+permissions:
+  contents: write
+  id-token: write
+  attestations: write
+
 
 jobs:
   artifacts:
@@ -10,19 +18,39 @@ jobs:
 
     steps:
     - name: checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v6
 
-    - uses: astral-sh/setup-uv@v6
+    - uses: astral-sh/setup-uv@v7
 
-    - name: Run tests without optional features
+    - name: Build wheel
       run: |
-        uv venv venv-test
-        . venv-test/bin/activate
-        uv build --wheel --sdist
+          uv venv venv-test
+          . venv-test/bin/activate
+          uv build --wheel --sdist
+          rm dist/.gitignore
+
+    - name: Attest build provenance
+      uses: actions/attest-build-provenance@v1
+      with:
+        subject-path: "dist/*"
 
     - name: upload release artifacts
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v6
       with:
         name: "release-artifacts"
         path: dist/*
         if-no-files-found: error
+
+    - name: Prepare release metadata
+      run: |
+        echo "TAG_NAME=${GITHUB_REF_NAME}" >> "$GITHUB_ENV"
+        echo "RELEASE_NAME=${GITHUB_REF_NAME#v}" >> "$GITHUB_ENV"
+
+    - name: Create or update GitHub release
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: ${{ env.TAG_NAME }}
+        name: ${{ env.RELEASE_NAME }}
+        files: dist/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
